--- a/Trabajo_N1_CV.html
+++ b/Trabajo_N1_CV.html
@@ -14,7 +14,7 @@
      <br>
      <h2>Egresado de Generation</h2>
      <h3>Con excelentes notas y recomendadisimo >:)</h3>
-     <img src="./Foto personal.png" alt="Foto personal de la persona en el curriculum, alta facha a decir verdad" width="300">
+     <img src="./Foto_personal.png" alt="Foto personal de la persona en el curriculum, alta facha a decir verdad" width="300">
     </div>
     <br>
     <hr>
@@ -42,7 +42,7 @@
     <br>
     <br>
     <nav>
-        <a href="./Portafolio.html">Checkea mi portafolio</a>
+        <a href="./Portafolio/Portafolio.html">Checkea mi portafolio</a>
     </nav>
 </body>
 </html>
